--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -10,9 +10,32 @@
 2. 수동부품 : 부품자체로는 동작이 안되지만 능동부품과 같이 조합이 되었을 경우 기능을 발휘함
 ## 부품
 1. 저항 : 전류의 흐름을 방해하여 전류나 전압의 크기를 바꿀 수 있음
+- 커패시터의 충전률을 제한하는 용도
+- 트랜지스터와 같은 부품의 전압제어 용도
+- LED 등의 과다전류를 방지하는 용도
+- 오디오블록의 주파수응답의 조정 또는 제한용도
+- 디지털 IC 입력단 전압의 풀업 또는 풀다운 저항용으로 사용
+- 회로 내 일정 부분 점에서의 전압제어용
 2. 커패시터 콘덴서 : DC전원에 커패시터를 병렬로 연결하면 전하를 축적하며 전원이 차단되어도 전위차가 한동안 유지되는데 커패시터는 이런 방식으로 에너지를 저장하고 방전시킬 수 있다 충전율과 방전율은 빠르지만 저항을 사용하여 조절할 수 있고 기본회로에서는 타이밍을 조절하는 부품으로 사용한다
+- 직류 전류에 실린 펄스나 전기적 노이즈를 제거
+- 직류 전류로부터 차단되어야 하는 부품의 커플링
+- 오디오 회로의 주파수 응답을 제어
+- 전원부의 출력전압의 안정성을 확보
+- 디지털블록의 오작동을 방지
+- IC의 안정된 동작용으로 사용
+- 저항과 함께 시간지연회로로 사용
 3. 인덕터 : 특정한 용도를 가진 코일이다 코일을 많이 감을수록 코일의 유도용량이 강해지고 철심에 감으면 더 큰 용량 값을 얻을 수 있다
+- 전류의 변화를 안정시키려는 특성을 이용하여 전원의 평활회로에 사용
+- 상호유도작용을 이용하여 트랜스로 사용
+- 전자석의 성질을 이용하여 릴레이 등의 스위치로 사용
+- 공진 특성을 이용하여 특정한 주파수만을 통과시키기 위하여 사용되는 필터회로로 사용
+- 전원 노이즈 차단용
 4. 다이오드 : 애노드(+) 캐소드(-) 단자로 구성되어 있고 애노드의 전위가 캐소드보다 높을 때 전류를 순방향으로만 흐르게 하는 부품이다 일반적으로 사용하는 다이오드 자체의 저항 성분에 의해 강하하는 전압은 0.7V 정도이다 다이오드의 주 기능은 정류기능이다
+- 일정한 전압을 만들기 위해 제너다이오드를 이용하여 정전압용으로 사용
+- 회로 보호를 위하여 일반다이오드, 제너다이오드 등을 사용하여 리미터용으로 사용
+- 가변용량다이오드를 이용한 변조용으로 사용
+- 실리콘 쇼트기 배리어형을 이용한 믹서 용도로 사용
+- AFC나 동조, 주파수 체배용으로 가변용량다이오드를 사용
 ## 신뢰성 검토
 |등급|제품|부품|
 |---|---|---|
@@ -27,3 +50,19 @@
 전자파 장애가 존재하는 환경에서 가전기기의 성능이 저하없이 안정적으로 동작할 수 있는 능력을 시험을 통해 확인하는 것
 3. EMC (Electromagnetic Compatibility : 전자파 양립성, 전자기 적합성)
 개발된 가전기기에서 발생하는 전자파가 다른 기기의 성능에 장애를 주지 않고 동시에 전자파의 영향으로부터 정상작동할 수 있는 능력이다
+## 특허, 실용실안
+특허는 자연법칙을 이용한 기술적 사상의 창작으로 기술의 신규성과 진보성을 심사하고 실용신안은 물품의 형상, 구조 또는 조합에 관한 자연법칙을 이용한 기술적 사상의 창작에 대한 기술의 신규성과 신보성을 심사한다
+특허는 심사에 1~2년 정도가 소요되고 실용신안은 3~6개월 정도가 소요된다 권리행사 기간은 각각 20년 10년인데 이는 심사기간이 포함된다
+## 게이트 논리회로
+1. NOT : 입력이 0일 때 1출력 1이면 0출력
+2. OR : 입력이 모두 0일 때 0출력 어느 한쪽이라도 1이면 1출력
+3. NOR : 입력이 모두 0일 때 1출력 어느 한쪽이라도 1이면 0출력
+4. AND : 입력이 모두 1일 때 1출력 어느 한쪽이라도 0이면 0추력
+5. NAND : 입력이 모두 1일 때 0출력 어느 한쪽이라도 0이면 1출력
+
+6. RTL(Resistor Transistor Logic) 3개의 TR이 병렬로 접속된 회로로서 상당이 큰 베이스 전류가 필요하고 다른 논리회로에 비하여 느리고 잡음에 약하다
+7. DTL(Diode Transistor Logic) 다이오드와 트렌지스터를 기본소자로 한 논리회로이고 잡음에 강하며 소비전력이 적고 TTL과 호완성을 갖는다
+8. TTL(Transistor Transistor Logic) 이미터, 멀티트랜지스터를 사용하여 고속 스위칭 회로에 사용하고 DTL과 호완성을 가진다
+9. DCTL(Direct Coupled Transistor Logic) 회로의 구성이 간단하고 소비전력이 적으며 고속 스위칭 회로로 사용된다
+10. ECTL(Emitter Coupled Transistor Logic) CML 이라고도 하며 동작속도가 가장 빠르나 소비전력은 가장 크다 고속 스위칭 회로로 사용된다
+11. HTL(High Thresshold Logic) 잡음 여유도가 높아 모터나 고압 스위치와 같은 잡음이나 열 전압이 발생하는 곳에 사용한다
