--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -59,7 +59,7 @@
 3. NOR : 입력이 모두 0일 때 1출력 어느 한쪽이라도 1이면 0출력
 4. AND : 입력이 모두 1일 때 1출력 어느 한쪽이라도 0이면 0추력
 5. NAND : 입력이 모두 1일 때 0출력 어느 한쪽이라도 0이면 1출력
-
+![image](https://github.com/user-attachments/assets/75fa44c8-b469-4683-9d81-c832115d583c)
 6. RTL(Resistor Transistor Logic) 3개의 TR이 병렬로 접속된 회로로서 상당이 큰 베이스 전류가 필요하고 다른 논리회로에 비하여 느리고 잡음에 약하다
 7. DTL(Diode Transistor Logic) 다이오드와 트렌지스터를 기본소자로 한 논리회로이고 잡음에 강하며 소비전력이 적고 TTL과 호완성을 갖는다
 8. TTL(Transistor Transistor Logic) 이미터, 멀티트랜지스터를 사용하여 고속 스위칭 회로에 사용하고 DTL과 호완성을 가진다
