--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -66,3 +66,26 @@
 9. DCTL(Direct Coupled Transistor Logic) 회로의 구성이 간단하고 소비전력이 적으며 고속 스위칭 회로로 사용된다
 10. ECTL(Emitter Coupled Transistor Logic) CML 이라고도 하며 동작속도가 가장 빠르나 소비전력은 가장 크다 고속 스위칭 회로로 사용된다
 11. HTL(High Thresshold Logic) 잡음 여유도가 높아 모터나 고압 스위치와 같은 잡음이나 열 전압이 발생하는 곳에 사용한다
+## 제품사양서
+제품 사양서란 제품의 기능과 성능에 관한 사항들을 정리한 것으로 제품, 제품 구성 부품에 대한 재료, 규격, 종류, 등급을 문서화한 것이다 제품의 기능과 성능, 제품 구성 재료, 제품 규격, 제품 형태, 제품 인증, 적용 분야, 보증기간 등의 내용을 작성한다
+## 블록도
+블록도는 하드웨어 요소들을 결합하여 여러 블록으로 나눈 후 각 블록들 간의 접속 상태를 나타낸 계략도이다 각 블록은 신호 처리를 실행하는 블록으로 나누어 나타내고 배선 케이블로 연결한다 간략화된 기능별 블록도로 전제 블록도를 배치하고 각각의 기능별 블록도를 보다 세세하게 작성하고 기능별 블록도의 입출력신호를 상호 연결하여 전체 블록도를 완성한다
+* 전체 블록도 구성 시 고려할 상황
+1. 마이크로컨트롤러 등 중요 기능들을 중앙에 배치하고 전원, 입출력, 통신 등의 블록들은 외곽에 배치하고 화살표로 연결한다
+2. 각 블록의 규격을 고려하여 신호의 입출력 관련 포트를 표시한다
+3. 각 블록에 필요한 입력 및 출력 변수가 있을 경우 선으로 연결하여 표시한다
+4. 신호의 흐름을 고려하여 각 포트의 선을 그리고 화살표로 방향을 표시한다
+5. 하나의 출력이 여러 개 블록의 입력으로 전달되는 경우 복수의 선으로 연결한다
+* 기능별 블록도 분류
+1. 제어부 : 마이크로컨트롤러에 사용자 프로그램을 탑재하여 각각의 입출력 등을 제어하는 부분이다
+2. 입력부 : 스위치, 먼지센서, 온도센서, 습도센서의 입력을 담당하는 부분이다
+3. 디스플레이부 : 8문자 LCD와 3색 LED를 나타내는 부분이다
+4. 통신부 : RS-485 통신을 이용하여 원격제어를 할 수 있는 부분이다
+5. 전원부 : 전체 시스템에 전원을 공급하여 제어부, 입력부, 디스플레이부, 통신부가 동작할 수 있도록 하는 부분이다
+* 배치 블록도 구성
+1. 모든 기능을 제어하는 제어부를 중앙에 배치한다
+2. 전원부는 모든 부품에 공급되므로 중앙 하단에 배치한다
+3. 입력신호인 센서들과 스위치는 좌측에 배치한다
+4. 출력신호인 LED들과 입출력 신호인 8문자 LCD의 디스플레이부와 통신부는 우측에 배치한다
+## DRC
+DRC는 설계규칙 및 전기규칙에 부합하는지 검사하는 것이다 검사 결과는 회로 도면에 DRC마커로 표시되고 오류나 경고 문구가 리포트에 기록되면 Session Log 창에도 나타난다 DRC는 전기적 규칙과 물리적 규칙이 있는데 전기적 규칙은 회로도의 배선, 핀, 포트, off page connector 등에 대한 전기적 검사 부분이며 
