--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -4,12 +4,6 @@
 2. 수동부품 : 부품자체로는 동작이 안되지만 능동부품과 같이 조합이 되었을 경우 기능을 발휘함
 ## 부품
 1. 저항 : 전류의 흐름을 방해하여 전류나 전압의 크기를 바꿀 수 있음
-2. 커패시터 콘덴서 : DC전원 전자산업기사 필기
-## 능동, 수동소자 구분
-1. 능동부품 : 부품자체가 입력과 출력을 가지고있음
-2. 수동부품 : 부품자체로는 동작이 안되지만 능동부품과 같이 조합이 되었을 경우 기능을 발휘함
-## 부품
-1. 저항 : 전류의 흐름을 방해하여 전류나 전압의 크기를 바꿀 수 있음
 - 커패시터의 충전률을 제한하는 용도
 - 트랜지스터와 같은 부품의 전압제어 용도
 - LED 등의 과다전류를 방지하는 용도
@@ -72,20 +66,4 @@
 블록도는 하드웨어 요소들을 결합하여 여러 블록으로 나눈 후 각 블록들 간의 접속 상태를 나타낸 계략도이다 각 블록은 신호 처리를 실행하는 블록으로 나누어 나타내고 배선 케이블로 연결한다 간략화된 기능별 블록도로 전제 블록도를 배치하고 각각의 기능별 블록도를 보다 세세하게 작성하고 기능별 블록도의 입출력신호를 상호 연결하여 전체 블록도를 완성한다
 * 전체 블록도 구성 시 고려할 상황
 1. 마이크로컨트롤러 등 중요 기능들을 중앙에 배치하고 전원, 입출력, 통신 등의 블록들은 외곽에 배치하고 화살표로 연결한다
-2. 각 블록의 규격을 고려하여 신호의 입출력 관련 포트를 표시한다
-3. 각 블록에 필요한 입력 및 출력 변수가 있을 경우 선으로 연결하여 표시한다
-4. 신호의 흐름을 고려하여 각 포트의 선을 그리고 화살표로 방향을 표시한다
-5. 하나의 출력이 여러 개 블록의 입력으로 전달되는 경우 복수의 선으로 연결한다
-* 기능별 블록도 분류
-1. 제어부 : 마이크로컨트롤러에 사용자 프로그램을 탑재하여 각각의 입출력 등을 제어하는 부분이다
-2. 입력부 : 스위치, 먼지센서, 온도센서, 습도센서의 입력을 담당하는 부분이다
-3. 디스플레이부 : 8문자 LCD와 3색 LED를 나타내는 부분이다
-4. 통신부 : RS-485 통신을 이용하여 원격제어를 할 수 있는 부분이다
-5. 전원부 : 전체 시스템에 전원을 공급하여 제어부, 입력부, 디스플레이부, 통신부가 동작할 수 있도록 하는 부분이다
-* 배치 블록도 구성
-1. 모든 기능을 제어하는 제어부를 중앙에 배치한다
-2. 전원부는 모든 부품에 공급되므로 중앙 하단에 배치한다
-3. 입력신호인 센서들과 스위치는 좌측에 배치한다
-4. 출력신호인 LED들과 입출력 신호인 8문자 LCD의 디스플레이부와 통신부는 우측에 배치한다
-## DRC
-DRC는 설계규칙 및 전기규칙에 부합하는지 검사하는 것이다 검사 결과는 회로 도면에 DRC마커로 표시되고 오류나 경고 문구가 리포트에 기록되면 Session Log 창에도 나타난다 DRC는 전기적 규칙과 물리적 규칙이 있는데 전기적 규칙은 회로도의 배선, 핀, 포트, off page connector 등에 대한 전기적 검사 부분이며 
+2. 각 블록의 규격을 고려하여 신호의 입출력 관련 포트를 표다
