--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -54,16 +54,62 @@
 4. AND : 입력이 모두 1일 때 1출력 어느 한쪽이라도 0이면 0추력
 5. NAND : 입력이 모두 1일 때 0출력 어느 한쪽이라도 0이면 1출력
 ![image](https://github.com/user-attachments/assets/75fa44c8-b469-4683-9d81-c832115d583c)
-6. RTL(Resistor Transistor Logic) 3개의 TR이 병렬로 접속된 회로로서 상당이 큰 베이스 전류가 필요하고 다른 논리회로에 비하여 느리고 잡음에 약하다
-7. DTL(Diode Transistor Logic) 다이오드와 트렌지스터를 기본소자로 한 논리회로이고 잡음에 강하며 소비전력이 적고 TTL과 호완성을 갖는다
-8. TTL(Transistor Transistor Logic) 이미터, 멀티트랜지스터를 사용하여 고속 스위칭 회로에 사용하고 DTL과 호완성을 가진다
-9. DCTL(Direct Coupled Transistor Logic) 회로의 구성이 간단하고 소비전력이 적으며 고속 스위칭 회로로 사용된다
-10. ECTL(Emitter Coupled Transistor Logic) CML 이라고도 하며 동작속도가 가장 빠르나 소비전력은 가장 크다 고속 스위칭 회로로 사용된다
-11. HTL(High Thresshold Logic) 잡음 여유도가 높아 모터나 고압 스위치와 같은 잡음이나 열 전압이 발생하는 곳에 사용한다
+6. RTL(Resistor Transistor Logic) 3개의 TR이 병렬로 접속된 회로로서 상당이 큰 베이스 전류가 필요하고 다른 논리회로에 비하여 느리고 잡음에 약하다 NOR
+7. DTL(Diode Transistor Logic) 다이오드와 트렌지스터를 기본소자로 한 논리회로이고 잡음에 강하며 소비전력이 적고 TTL과 호완성을 가진다 NAND
+8. TTL(Transistor Transistor Logic) 이미터, 멀티트랜지스터를 사용하여 고속 스위칭 회로에 사용하고 DTL과 호완성을 가진다 NAND
+9. DCTL(Direct Coupled Transistor Logic) 회로의 구성이 간단하고 소비전력이 적으며 고속 스위칭 회로로 사용된다 NOR
+10. ECTL(Emitter Coupled Transistor Logic) CML 이라고도 하며 동작속도가 가장 빠르나 소비전력은 가장 크다 고속 스위칭 회로로 사용된다 NOR 
+11. HTL(High Thresshold Logic) 잡음 여유도가 높아 모터나 고압 스위치와 같은 잡음이나 열 전압이 발생하는 곳에 사용한다 NAND
 ## 제품사양서
 제품 사양서란 제품의 기능과 성능에 관한 사항들을 정리한 것으로 제품, 제품 구성 부품에 대한 재료, 규격, 종류, 등급을 문서화한 것이다 제품의 기능과 성능, 제품 구성 재료, 제품 규격, 제품 형태, 제품 인증, 적용 분야, 보증기간 등의 내용을 작성한다
 ## 블록도
 블록도는 하드웨어 요소들을 결합하여 여러 블록으로 나눈 후 각 블록들 간의 접속 상태를 나타낸 계략도이다 각 블록은 신호 처리를 실행하는 블록으로 나누어 나타내고 배선 케이블로 연결한다 간략화된 기능별 블록도로 전제 블록도를 배치하고 각각의 기능별 블록도를 보다 세세하게 작성하고 기능별 블록도의 입출력신호를 상호 연결하여 전체 블록도를 완성한다
-* 전체 블록도 구성 시 고려할 상황
-1. 마이크로컨트롤러 등 중요 기능들을 중앙에 배치하고 전원, 입출력, 통신 등의 블록들은 외곽에 배치하고 화살표로 연결한다
-2. 각 블록의 규격을 고려하여 신호의 입출력 관련 포트를 표다
+* 배치 블록도
+1. 제어부는 중앙에 둔다
+2. 디스플레이부, 통신부는 우측에 둔다
+3. 스위치, 센서는 좌측에 둔다
+4. 전원부는 중앙 하단에 둔다
+## DRC
+DRC는 설계 규칙 및 전기규칙에 부합하는지 검사하는 것이다
+검사 결과는 회로도면에 DRC마크와 Session Log 창에도 나온다
+## 플립플롭
+1. RS플립플롭 : NAND회로 두개를 사용하여 2개의 입력과 2개의 출력을 하는 멀티바이브레이터와 같이 동작하는 회로이다
+2. JK플립플롭 : 2개의 입력변수를 가지며 각 입력은 셋과 리셋을 담당한다 2개의 입력 모두 1이 들어오면 작동한다
+3. T플립플롭 : JK플립플롭의 두 입력선을 하나로 묶은 것
+4. D플립플롭 : RS플립플롭에서 R선에서 인버터를 병렬 연결하여 S선 입력으로 사용
+## 디스플레이부
+디스플레이 장치는 시각적이나 입체적인 수신, 저장, 전달을 위해 정보를 나타내는 장치이다 전기가 들어가면 전자 디스플레이
+## 디스플레이 종류
+음극선관(CRT), 평판 디스플레이(FPD), 플렉시블 디스플레이(flexible display) 가 있다
+## 7-세그먼트
+1. 정적 구동 방식 : 7447(Anode) 7448(Cathode) 가 필요하다
+2. 동적 구동 방식 : 8550, 74138, 74595
+## Application Processer(AP)
+임베디드시스템의 특징은 특정한 기능에 부합하는 최적화, 소형, 경량화, 저 전력화, 고 신뢰성이면서도 네트워크와 멀티 미디어를 지원하는 실시간 시스템이다 MCU보단 성능은 좋지만 범용 프로세서보단 성능이 좋지 않다 하지만 적용 범위는 훨씬 좋다
+## RS-485 RS-422 차이
+RS-485는 half-Duplex Rs-422는 full-Duplex
+## PCB설계 기준
+최대한 짧게, 굵게, 분리 해야한다 (세부 : 노이즈 대체 filter, sheild(차폐), 분리)
+## PCB 설계 순서
+1. 회로도 작성 : 작성 환경 설정, schematic editor를 이용한 회로 입력하기, Netlist 정보 출력
+2. 설계 환경 및 option 지정 : design rule 설정 Clearance 설정, display color 설정
+3. 부품 배치하기 : PCB 외형 그리기, 부품 배치하기
+4. 배선작업 : 신호선 배선, 전원선 배선
+5. DRC : 오류 검사
+6. gerber data 작성 : Top/Bottom/SMT/SMB/SST/Drill
+## PCB 형성
+* Subtractive
+무전해/전해 panel 도금 후 에칭을 통해 회로 형성, panel, pattern 도금 후 에칭을 통해 회로 형성
+* Additive
+무전해 panel 도금 후 필요한 부분만 전해 Pattern 도금으로 회로를 형성, 무전해 pattern 도금으로 회로를 형성
+## 시정수
+물리량이 시간에 대해 지수관수적으로 변화하여 정상치에 달하는 경우 양이 정상치의 63.2에 달할 때까지의 시간          
+RC 직렬회로 : 저항 X 커패시터
+RL 직렬회로 : 코일 / 저항
+## DC-DC 컨버터
+어떤 전압의 직류 전원에서 다른 전압의 직류 전원으로 변환하는 전자회로 장치를 의미한다 입력 전압을 높여주는 승압형 converter가 있고 입력 전압을 낮춰주는 강압형 converter가 있다
+## 선형/스위칭 레귤레이터
+| |선형 레귤레이터|스위칭 레귤에이터|
+|---|---|---|
+|이점|단순함, 낮은 출력 리플전압, 낮은 전자파 장애, 탁월한 라인 및 부하 레귤레이션, 부하 또는 라인 변화에 빠른 대응 시간|높은 효율성, 높은 전력 밀도 처리 가능, 압력 전압보다 높거나 낮은 단일 및 다중 출력 전압을 제공할 수 있는 토폴로지 제공|
+|단점|낮은 효율성, 히트 싱크 필요시 많은 공간 필요|상대적으로 높은 출력 리플 전압, 상대적으로 느린 트랜지언트 회복 시간, 전자파 장애 발생|
