--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -1,7 +1,7 @@
 # 전자산업기사 필기
 ## 능동, 수동소자 구분
-1. 능동부품 : 부품자체가 입력과 출력을 가지고있음
-2. 수동부품 : 부품자체로는 동작이 안되지만 능동부품과 같이 조합이 되었을 경우 기능을 발휘함
+1. 능동부품 : 부품자체가 입력과 출력을 가지고있음 (트랜지스터, 다이오드, IC)
+2. 수동부품 : 부품자체로는 동작이 안되지만 능동부품과 같이 조합이 되었을 경우 기능을 발휘함 (저항, 코일, 커패시터)
 ## 부품
 1. 저항 : 전류의 흐름을 방해하여 전류나 전압의 크기를 바꿀 수 있음
 - 커패시터의 충전률을 제한하는 용도
@@ -113,3 +113,5 @@ RL 직렬회로 : 코일 / 저항
 |---|---|---|
 |이점|단순함, 낮은 출력 리플전압, 낮은 전자파 장애, 탁월한 라인 및 부하 레귤레이션, 부하 또는 라인 변화에 빠른 대응 시간|높은 효율성, 높은 전력 밀도 처리 가능, 압력 전압보다 높거나 낮은 단일 및 다중 출력 전압을 제공할 수 있는 토폴로지 제공|
 |단점|낮은 효율성, 히트 싱크 필요시 많은 공간 필요|상대적으로 높은 출력 리플 전압, 상대적으로 느린 트랜지언트 회복 시간, 전자파 장애 발생|
+## SMPS
+SMPS는 전력용 MOSFET 등 반도체 소자를 스위치로 사용하여 직류 입력 전압을 일단 구형파 형태의 전압으로 변환한 후 필터를 통하여 제어된 직류 출력 전압을 얻는 장치이다
