--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -115,3 +115,17 @@ RL 직렬회로 : 코일 / 저항
 |단점|낮은 효율성, 히트 싱크 필요시 많은 공간 필요|상대적으로 높은 출력 리플 전압, 상대적으로 느린 트랜지언트 회복 시간, 전자파 장애 발생|
 ## SMPS
 SMPS는 전력용 MOSFET 등 반도체 소자를 스위치로 사용하여 직류 입력 전압을 일단 구형파 형태의 전압으로 변환한 후 필터를 통하여 제어된 직류 출력 전압을 얻는 장치이다
+## 노이즈(잡음)를 최소화 하는 방법
+1. 배선 레이아웃(배선 잘하기)
+2. 그라운딩 : GND에는 시그널 그라운드(SG), 프레임 그라운드(FG), 어스(E) 가 있다 SG는 각 회로의 공통 라인, FG는 금속 프레임과 케이스, E는 땅에 있는 선 이다
+3. 필터링 : 반사 흡수 바이패스(땅으로 패스)
+## DVI와 HDMI
+DVI : DVI-D(디지털만), DVI-A(아날로그만), DVI-I(디지털, 아날로그 둘다) 해상도 지원 폭에 따라 Single-link와 Dual-link로 나뉜다 1920X1080 이하면 Single 이상이면 Dual
+HDMI : HDMI는 비압축 방식의 비디오와 오디오 신호를 전송하기 위한 규격
+## 케이블
+1. 디지털 케이블 : 음질의 영향이 크다
+2. 언벨런스 케이블 : 오디오에서 사용
+3. 밸런스 케이블 : 특수한 환경(방송국, 스튜디오)를 위해 개발됨 XLR단자에 접속됨 실드선 1개 신호선 2개
+4. 동축 케이블 : 구리선에 흐르는 전기 신호가 그것을 감싸고 있는 외부 구리망 때문에 외부의 전기적 간섭을 덜 받아 전력 손실 적음 50옴 75옴
+5. 스트랜드 케이블 : 여러 가닥으로 꼬아 만듬
+6. 배선용 케이블 : 오디오 회로에 사용되는 선재로서, 주로 연심과 단심 또는 실드선이 사용된다
