--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -58,7 +58,7 @@
 7. DTL(Diode Transistor Logic) 다이오드와 트렌지스터를 기본소자로 한 논리회로이고 잡음에 강하며 소비전력이 적고 TTL과 호완성을 가진다 NAND
 8. TTL(Transistor Transistor Logic) 이미터, 멀티트랜지스터를 사용하여 고속 스위칭 회로에 사용하고 DTL과 호완성을 가진다 NAND
 9. DCTL(Direct Coupled Transistor Logic) 회로의 구성이 간단하고 소비전력이 적으며 고속 스위칭 회로로 사용된다 NOR
-10. ECTL(Emitter Coupled Transistor Logic) CML 이라고도 하며 동작속도가 가장 빠르나 소비전력은 가장 크다 고속 스위칭 회로로 사용된다 NOR 
+10. ECTL(Emitter Coupled Transistor Logic) CML 이라고도 하며 동작속도가 가장 빠르나 소비전력은 가장 크다 고속 스위칭 회로로 사용된다 NOR
 11. HTL(High Thresshold Logic) 잡음 여유도가 높아 모터나 고압 스위치와 같은 잡음이나 열 전압이 발생하는 곳에 사용한다 NAND
 ## 제품사양서
 제품 사양서란 제품의 기능과 성능에 관한 사항들을 정리한 것으로 제품, 제품 구성 부품에 대한 재료, 규격, 종류, 등급을 문서화한 것이다 제품의 기능과 성능, 제품 구성 재료, 제품 규격, 제품 형태, 제품 인증, 적용 분야, 보증기간 등의 내용을 작성한다
@@ -129,3 +129,25 @@ HDMI : HDMI는 비압축 방식의 비디오와 오디오 신호를 전송하기
 4. 동축 케이블 : 구리선에 흐르는 전기 신호가 그것을 감싸고 있는 외부 구리망 때문에 외부의 전기적 간섭을 덜 받아 전력 손실 적음 50옴 75옴
 5. 스트랜드 케이블 : 여러 가닥으로 꼬아 만듬
 6. 배선용 케이블 : 오디오 회로에 사용되는 선재로서, 주로 연심과 단심 또는 실드선이 사용된다
+# 솔더 마스크
+동박 면 위에 있는 유전체로 만들어진 층이다 산소 부식을 막아주며 다른 금속물에 접촉해 단락되는 것을 막는 절연 역할을 한다
+# PCB 제조 공정 중 내충회로 인쇄 공정
+1. 내층 노광 : 드라이필름, 패턴 이미지
+2. 내층 현상 : 미경화, 탄산나트륨
+3. 내층 부식 및 레지스트 박리 : 수산화나트륨, 수산화칼륨
+4. 본딩
+5. 적층 : 쌓는 공정
+6. 성형
+## PCB 제조 공정 중 포토 공정
+1. 정면 : 동박면을 거칠게 해주는 공정
+2. 적층 : 열과 압력으로 압착
+3. 노광 : 정해진 농도와 노광시간의 빛 에너지를 공급하여 단량체로 반응시켜 패턴 이미지를 형성
+4. 현상 : 미경화, 탄산나트륨
+## PCB 제조 공정 중 도금 공정
+1. 동 도금
+2. 전해 땜납 도금
+3. 알칼리 외층 부식 : 암모니아수 또는 염화암모늄
+## PCB 제조 공정 중 검사
+1. BBT(Bare Board Test) : 단단한 기판에 맞는 지그를 조립하여 검사하는 데디케이트형, 통합 지그 개념으로 모든 기판을 검사하는 유니버셜형, 2개의 프로브 로봇 팔이 검사하는 플라잉 프로브형
+2. 자동 광학 검사(A.O.I) : 회로 패턴 폭, 회로 패턴 간격 등의 치수까지 측정할 수 있는 광을 이용한 자동 검사이다
+3. 육안 검사
