--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -151,3 +151,4 @@ HDMI : HDMI는 비압축 방식의 비디오와 오디오 신호를 전송하기
 1. BBT(Bare Board Test) : 단단한 기판에 맞는 지그를 조립하여 검사하는 데디케이트형, 통합 지그 개념으로 모든 기판을 검사하는 유니버셜형, 2개의 프로브 로봇 팔이 검사하는 플라잉 프로브형
 2. 자동 광학 검사(A.O.I) : 회로 패턴 폭, 회로 패턴 간격 등의 치수까지 측정할 수 있는 광을 이용한 자동 검사이다
 3. 육안 검사
+## 육안검사
