--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -152,3 +152,7 @@ HDMI : HDMI는 비압축 방식의 비디오와 오디오 신호를 전송하기
 2. 자동 광학 검사(A.O.I) : 회로 패턴 폭, 회로 패턴 간격 등의 치수까지 측정할 수 있는 광을 이용한 자동 검사이다
 3. 육안 검사
 ## 육안검사
+1. 부품의 균열
+2. 부품의 위치 이탈
+3. 부품 깨짐
+4. 냉땜
