--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -162,19 +162,19 @@ HDMI : HDMI는 비압축 방식의 비디오와 오디오 신호를 전송하기
 8. 역삽 : 바뀌어 장착
 9. 오삽 : 잘못된 용량, 다른 부품
 ## SMT 표면실장기술
-표면실장기술은 표면실장형 부품을 프린트 배선판 표면에 장착하고 납땜하는 기술을 의미하는 것이다
-장점
+표면실장기술은 표면실장형 부품을 프린트 배선판 표면에 장착하고 납땜하는 기술을 의미하는 것이다                     
+장점                       
 1. 신뢰성, 제품 성능 향상
 2. 생산비용 절감
 3. 자동화가 쉬워짐
 4. 단순해짐
-5. 생산성 향상
-단점
+5. 생산성 향상                       
+단점                     
 1. 투자경비 필요
 2. 제조기술 요구
 3. 재작업이 쉽지 않음
-4. 새로운 방법 요구
-공정
+4. 새로운 방법 요구                        
+공정                     
 1. PCB 공급장치(PCB 로더) : PCB기판을 자동공급함
 2. 인쇄기(스크린 프린터) : 솔더페이스트를 인쇄
 3. 칩 부품 장착(칩 마운터) : 소형 칩 장착
@@ -182,3 +182,6 @@ HDMI : HDMI는 비압축 방식의 비디오와 오디오 신호를 전송하기
 5. 리플로 납땜기(리플로 오븐) : 부품들 납땜
 6. 검사기 : 외관검사(납땜상태 등)
 7. PCB 수납장치(언로더) : PCB를 적재하고 수납
+## 7-세그먼트
+| |정적|동적|
+|---|---|---|
