--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -185,3 +185,54 @@ HDMI : HDMI는 비압축 방식의 비디오와 오디오 신호를 전송하기
 ## 7-세그먼트
 | |정적|동적|
 |---|---|---|
+|특징|연속적으로 전기를 공급되는 구동회로|짧은 시간에 반복적으로 on/off 시키는 구동회로|
+|장점|밝기가 밝다|회로가 간단함, 전력소비가 적음, 다수의 출력, 간단히 회로 구성 가능, MCU구동 시 소수의 포트 제어|
+|단점|전력 소비가 많음, 구동 회로가 복잡함, 단가가 비쌈, MCU구동 시 다수의 포트 제어|밝기가 떨어짐, 릴레이등의 구동에는 사용이 불가능함|
+## 시뮬레이션
+1. Time Domain(Transient) : 시간을 증가시키면서 회로의 전압, 전류, 논리 상태등의 과도 응답 해석
+2. DC Sweep : 전압과 모댈 파라미터를 변화시키면서 회로의 전압, 전류, 논리등을 분석
+3. AC Sweep(Noise) : 입력주파수를 변화시키면서 회로 시스템에 대한 주파수 응답을 계산하는 해석
+## 전선 구조
+나선과 절연전선으로 나선은 단선과 연선으로 나뉘고 구리로 만들어짐 절연전선은 나선의 겉을 고무나 에나멜 같은 절연물질로 둘러쌈
+## 전선 두께에 따른 허용 전류(AWG)
+AWG 번호가 높아질수록 지름, 단면적, 허용전류는 작아지고 저항은 커진다
+## 칩저항
+F : +-1%            
+G : +-2%         
+J : +-5%           
+K : +-10%              
+M : +-20%                 
+Z : 80%-20%                
+## RF(방사주파수) 
+- 전자파가 점유하는 전체 주파수범위 중에서 전파가 점유하는 무선 주파수
+- 300Mhz ~ 1GHz의 고주파 무선통신 및 이를 이용하는 장비 설계, 연구 공학분야 일체
+## 레귤레이터 출력 전압
+- 두번째 숫자가 8이면 + 9면 -
+- 세번째 네번째 숫자 값
+ex) Lm7809면 +9V
+## 측정장비
+- 커브 트레이서 : 전압/전류를 step별로 안정적으로 공급하여 디바이스의 특성을 분석
+- 논리 분석기 : 디지털 회로 또는 디지털 시스템으로부터 입력된 여러 개의 디지털 신호를 저장하고 원하는 시점에 표시
+- 오실로스코프 : 신호의 전압 또는 전류 파형도 볼 수 있다(진폭 주파수 위상 등을 측정할 수 있음)
+- 멀티미터 : 직류 전압/전류, 교류 전압 및 저항 등을 하나의 계기로 측정 가능
+- 스펙트럼 분석기 : 무선, 음향, 전기, 광학 신호의 주파수 성분을 검사하는데 사용
+## 환경규제
+- WEEE : 폐가전제품의 의무재활용에 관한 규제
+- RoHS : 납 등 중금속물질에 대한 규제
+- EuP : 제품개발 과정의 친환경성 규제
+- REACH : 제품 또는 부품에 사용되는 화학물질에 관한 규제
+- 기후변화협약 : 지구온난화 물질에 대한 규제
+- 몬트리올의 정서 : CFC 등 오존층 파괴물질 규제
+- 도하개발어젠다 : 환경과 무역 규제의 연계
+## MEMS
+반도체와 기계를 합친 기술로 실리콘이나 수정, 유리 등을 가공해 초고밀도 집적회로(초미세 기계 구조물)를 만드는 기술을 말한다
+## BOM
+제품생산에 적용하는 모든 부품과 완제품을 구성하는 모든 자제가 포함되어있는 자재명세서
+## 특허침해 회피를 위한 대응회로 구상에 필요한 요건
+1. 특허법
+2. 기존기술과 평가 대상 특허를 분석할 수 있는 기술적 지식
+3. 전자회로에 대한 기본지식
+4. 회로설계 능력
+5. 신기술에 대한 지식
+6. 신기술에 대한 판독 능력
+## 센서
