--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -236,3 +236,15 @@ ex) Lm7809면 +9V
 5. 신기술에 대한 지식
 6. 신기술에 대한 판독 능력
 ## 센서
+- 물체의 유뮤 : Micro swich, Hall Senser, 광전 센서, 유도형 근접센서, 정전용량형 근접센서, 자기형 근접센서
+- 위치 변위 각도 : Potentiometer, Differential Transformer, Linear Encoder, Resolver, Rotary Encoder
+- 압력 응력 변형 토크 중량 : Strain Gauge, 감압 Diode, Load Cell, Diaphragm, Bourdon Tube, Bellows
+- 속도 회전수 가속도 진동 : 초음파 센서, Laser Doppler Velocimeter, 속도계용 발전기, Rotary Encoder, 압전소자, MEMS 가속도 센서
+- 온도 : Bimetal, Thermo-Couple, 저항 측온계, 광 고온계, Thermistor
+- 빛 : Photo Diode Photo Transistor Photo Thyristor, 광전자 증배관, CCD Image Senser, COMS Image Senser
+- 자기 : 자기형 근접센서, 자침, Hall Senser, MR
+## 필터
+- LPF(저역 통과 필터) : 차단주파수 이하 통과
+- HPF(고역 통과 필터) : 차단주파수 이상 통과
+- BPF(대역 통과 필터) : 저역 차단주파수 이상 고역 차단주파수 이하 통과
+- BS/RF(Band Stop/Reject Filter : 대역 차단 필터) : 저역 차단주파수 이상 고역 차단주파수 이하 차단
