--- a/전자산업기사/필기.md
+++ b/전자산업기사/필기.md
@@ -46,7 +46,7 @@
 개발된 가전기기에서 발생하는 전자파가 다른 기기의 성능에 장애를 주지 않고 동시에 전자파의 영향으로부터 정상작동할 수 있는 능력이다
 ## 특허, 실용실안
 특허는 자연법칙을 이용한 기술적 사상의 창작으로 기술의 신규성과 진보성을 심사하고 실용신안은 물품의 형상, 구조 또는 조합에 관한 자연법칙을 이용한 기술적 사상의 창작에 대한 기술의 신규성과 신보성을 심사한다
-특허는 심사에 1~2년 정도가 소요되고 실용신안은 3~6개월 정도가 소요된다 권리행사 기간은 각각 20년 10년인데 이는 심사기간이 포함된다
+특허는 심사에 1-2년 정도가 소요되고 실용신안은 3-6개월 정도가 소요된다 권리행사 기간은 각각 20년 10년인데 이는 심사기간이 포함된다
 ## 게이트 논리회로
 1. NOT : 입력이 0일 때 1출력 1이면 0출력
 2. OR : 입력이 모두 0일 때 0출력 어느 한쪽이라도 1이면 1출력
@@ -87,7 +87,7 @@ DRC는 설계 규칙 및 전기규칙에 부합하는지 검사하는 것이다
 ## Application Processer(AP)
 임베디드시스템의 특징은 특정한 기능에 부합하는 최적화, 소형, 경량화, 저 전력화, 고 신뢰성이면서도 네트워크와 멀티 미디어를 지원하는 실시간 시스템이다 MCU보단 성능은 좋지만 범용 프로세서보단 성능이 좋지 않다 하지만 적용 범위는 훨씬 좋다
 ## RS-485 RS-422 차이
-RS-485는 half-Duplex Rs-422는 full-Duplex
+RS-485는 full-Duplex Rs-422는 half-Duplex
 ## PCB설계 기준
 최대한 짧게, 굵게, 분리 해야한다 (세부 : 노이즈 대체 filter, sheild(차폐), 분리)
 ## PCB 설계 순서
